--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,10 +46,10 @@
     "    def only_right_side_of_nonterminals(self, production):\n",
     "        return list(filter(lambda x: x[0] == '<' and x.index('>') == len(x)-1, production.right_side)) == production.right_side\n",
     "    \n",
-    "    def has_null_sequence_on_right_side(self, production):\n",
+    "    def non_terminal_has_null_sequence_on_right_side(self, non_terminal):\n",
     "        has_null_sequence = False\n",
-    "        for _production in self.get_productions_same_non_terminal(production.left_side):\n",
-    "            if _production.right_side[0] == self.null_sequence_symbol:\n",
+    "        for production in self.get_productions_same_non_terminal(non_terminal):\n",
+    "            if production.right_side[0] == self.null_sequence_symbol:\n",
     "                has_null_sequence = True\n",
     "                break\n",
     "        return has_null_sequence\n",
@@ -65,7 +65,7 @@
     "                                      self.get_productions_same_non_terminal(non_terminal)))\n",
     "        \n",
     "        for production in productions:\n",
-    "            if self.has_null_sequence_on_right_side(production):\n",
+    "            if self.non_terminal_has_null_sequence_on_right_side(production.left_side):\n",
     "                has_null_sequence = True\n",
     "                break\n",
     "            if self.only_right_side_of_nonterminals(production):\n",
@@ -84,21 +84,45 @@
     "        non_terminals =  self.get_non_terminals()\n",
     "        nullable_non_terminals = []\n",
     "        for non_terminal in non_terminals:\n",
-    "            if self.has_null_sequence_derivation(non_terminal):\n",
+    "            if self.has_null_sequence_derivation(non_terminal, None):\n",
     "                nullable_non_terminals.append(non_terminal)\n",
+    "        return nullable_non_terminals\n",
+    "    \n",
+    "    def production_has_null_sequence_on_right_side(self, production):\n",
+    "        return production.right_side[0] == self.null_sequence_symbol\n",
+    "    \n",
+    "    def get_nullable_productions(self):\n",
+    "        nullable_non_terminals = self.get_nullable_non_terminals()\n",
+    "        production_indexes = []\n",
+    "        for index in range(0, len(self.production_arr)):\n",
+    "            if self.production_has_null_sequence_on_right_side(self.production_arr[index]):\n",
+    "                print(index)\n",
+    "                production_indexes.append(index)\n",
+    "            if self.only_right_side_of_nonterminals(self.production_arr[index]):\n",
+    "                all_nullable = True\n",
+    "                for non_terminal in self.production_arr[index].right_side:\n",
+    "                    all_nullable = all_nullable and non_terminal in nullable_non_terminals\n",
+    "                    if not all_nullable:\n",
+    "                        break\n",
+    "                if all_nullable:\n",
+    "                    production_indexes.append(index)\n",
+    "        return production_indexes\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['<A>', '<B>', '<C>', '<D>', '<E>']\n"
+      "['<B>', '<D>', '<E>']\n",
+      "2\n",
+      "6\n",
+      "[2, 6, 8]\n"
      ]
     }
    ],
@@ -110,14 +134,13 @@
     "p1 = [Production('<S>', ['<A>', '<S>', '<B>']), Production('<S>', ['a']), Production('<A>', ['a', '<A>']),\n",
     "      Production('<A>', ['%']), Production('<B>', ['b', '<B>']), Production('<B>', ['%'])]\n",
     "p_set = ProductionSet('%', p)   \n",
-    "p_set.has_null_sequence_derivation('<B>', None)\n",
-    "print(p_set.get_non_terminals())   \n",
-    "        \n"
+    "print(p_set.get_nullable_non_terminals())   \n",
+    "print(p_set.get_nullable_productions())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
