--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import UtilFunctions as util_f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +37,14 @@
     "    def __init__(self, null_sequence_symbol, production_arr):\n",
     "        self.null_sequence_symbol = null_sequence_symbol\n",
     "        self.production_arr = production_arr\n",
+    "\n",
+    "    \n",
+    "    def is_non_terminal(self, symbol):\n",
+    "        return symbol[0] == '<' and symbol.index('>') == len(symbol)-1\n",
+    "    \n",
+    "        \n",
+    "    def is_terminal(self, symbol):\n",
+    "        return symbol != self.null_sequence_symbol and not self.is_non_terminal(symbol)\n",
     "    \n",
     "    def get_non_terminals(self):\n",
     "        non_terminals = []\n",
@@ -96,7 +113,6 @@
     "        production_indexes = []\n",
     "        for index in range(0, len(self.production_arr)):\n",
     "            if self.production_has_null_sequence_on_right_side(self.production_arr[index]):\n",
-    "                print(index)\n",
     "                production_indexes.append(index)\n",
     "            if self.only_right_side_of_nonterminals(self.production_arr[index]):\n",
     "                all_nullable = True\n",
@@ -107,12 +123,44 @@
     "                if all_nullable:\n",
     "                    production_indexes.append(index)\n",
     "        return production_indexes\n",
-    "        "
+    "    \n",
+    "    def get_set_of_firsts(self, non_terminal):\n",
+    "        productions = self.get_productions_same_non_terminal(non_terminal)\n",
+    "        nullable_non_terminals = self.get_nullable_non_terminals()\n",
+    "        set_of_firsts = []\n",
+    "        for production in productions:\n",
+    "            if self.is_terminal(production.right_side[0]):\n",
+    "                set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts,\n",
+    "                                                                                 self.get_set_of_firsts(symbol))\n",
+    "            elif not self.production_has_null_sequence_on_right_side(production):\n",
+    "                for symbol in production.right_side:\n",
+    "                    if symbol == non_terminal:\n",
+    "                        break\n",
+    "                    if self.is_non_terminal(symbol):\n",
+    "                        if not symbol in nullable_non_terminals:\n",
+    "                            set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts,\n",
+    "                                                                                 self.get_set_of_firsts(symbol))\n",
+    "                            break\n",
+    "                        else:\n",
+    "                            set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts,\n",
+    "                                                                                 self.get_set_of_firsts(symbol))\n",
+    "                    else:\n",
+    "                        set_of_firsts.append(symbol)\n",
+    "                        break\n",
+    "        print(set_of_firsts)\n",
+    "        return set_of_firsts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -120,9 +168,11 @@
      "output_type": "stream",
      "text": [
       "['<B>', '<D>', '<E>']\n",
-      "2\n",
-      "6\n",
-      "[2, 6, 8]\n"
+      "[2, 6, 8]\n",
+      "['b']\n",
+      "['e']\n",
+      "['b', 'e', 'f']\n",
+      "['b', 'e', 'f']\n"
      ]
     }
    ],
@@ -135,12 +185,13 @@
     "      Production('<A>', ['%']), Production('<B>', ['b', '<B>']), Production('<B>', ['%'])]\n",
     "p_set = ProductionSet('%', p)   \n",
     "print(p_set.get_nullable_non_terminals())   \n",
-    "print(p_set.get_nullable_productions())\n"
+    "print(p_set.get_nullable_productions())\n",
+    "print(p_set.get_set_of_firsts('<E>'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
