--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ProductionSet:\n",
-    "    def __init__(self, null_sequence_symbol, production_arr):\n",
+    "    def __init__(self, null_sequence_symbol, production_arr, non_terminal_arr):\n",
     "        self.null_sequence_symbol = null_sequence_symbol\n",
     "        self.production_arr = production_arr\n",
+    "        self.non_terminal_arr = non_terminal_arr\n",
     "\n",
     "    \n",
     "    def is_non_terminal(self, symbol):\n",
@@ -47,11 +48,7 @@
     "        return symbol != self.null_sequence_symbol and not self.is_non_terminal(symbol)\n",
     "    \n",
     "    def get_non_terminals(self):\n",
-    "        non_terminals = []\n",
-    "        for production in self.production_arr:\n",
-    "            if not production.left_side in non_terminals:\n",
-    "                non_terminals.append(production.left_side)\n",
-    "        return non_terminals\n",
+    "        return self.non_terminal_arr\n",
     "    \n",
     "    def get_productions_same_non_terminal(self, non_terminal):\n",
     "        productions = []\n",
@@ -98,9 +95,8 @@
     "        return has_null_sequence\n",
     "            \n",
     "    def get_nullable_non_terminals(self):\n",
-    "        non_terminals =  self.get_non_terminals()\n",
     "        nullable_non_terminals = []\n",
-    "        for non_terminal in non_terminals:\n",
+    "        for non_terminal in self.get_non_terminals():\n",
     "            if self.has_null_sequence_derivation(non_terminal, None):\n",
     "                nullable_non_terminals.append(non_terminal)\n",
     "        return nullable_non_terminals\n",
@@ -108,8 +104,7 @@
     "    def production_has_null_sequence_on_right_side(self, production):\n",
     "        return production.right_side[0] == self.null_sequence_symbol\n",
     "    \n",
-    "    def get_nullable_productions(self):\n",
-    "        nullable_non_terminals = self.get_nullable_non_terminals()\n",
+    "    def get_nullable_productions(self, nullable_non_terminals):\n",
     "        production_indexes = []\n",
     "        for index in range(0, len(self.production_arr)):\n",
     "            if self.production_has_null_sequence_on_right_side(self.production_arr[index]):\n",
@@ -124,14 +119,12 @@
     "                    production_indexes.append(index)\n",
     "        return production_indexes\n",
     "    \n",
-    "    def get_set_of_firsts(self, non_terminal):\n",
-    "        productions = self.get_productions_same_non_terminal(non_terminal)\n",
-    "        nullable_non_terminals = self.get_nullable_non_terminals()\n",
+    "    def get_set_of_firsts_for_non_terminal(self, non_terminal, nullable_non_terminals):\n",
+    "        productions =  self.get_productions_same_non_terminal(non_terminal)\n",
     "        set_of_firsts = []\n",
     "        for production in productions:\n",
     "            if self.is_terminal(production.right_side[0]):\n",
-    "                set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts,\n",
-    "                                                                                 self.get_set_of_firsts(symbol))\n",
+    "                set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts, [production.right_side[0]])\n",
     "            elif not self.production_has_null_sequence_on_right_side(production):\n",
     "                for symbol in production.right_side:\n",
     "                    if symbol == non_terminal:\n",
@@ -139,16 +132,51 @@
     "                    if self.is_non_terminal(symbol):\n",
     "                        if not symbol in nullable_non_terminals:\n",
     "                            set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts,\n",
-    "                                                                                 self.get_set_of_firsts(symbol))\n",
+    "                                            self.get_set_of_firsts_for_non_terminal(symbol, nullable_non_terminals))\n",
     "                            break\n",
     "                        else:\n",
     "                            set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts,\n",
-    "                                                                                 self.get_set_of_firsts(symbol))\n",
+    "                                            self.get_set_of_firsts_for_non_terminal(symbol, nullable_non_terminals))\n",
     "                    else:\n",
-    "                        set_of_firsts.append(symbol)\n",
+    "                        set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts, [symbol])\n",
     "                        break\n",
-    "        print(set_of_firsts)\n",
-    "        return set_of_firsts"
+    "        return set_of_firsts\n",
+    "    \n",
+    "    def get_set_of_firsts_for_non_terminals(self):\n",
+    "        set_of_firsts = []\n",
+    "        nullable_non_terminals = self.get_nullable_non_terminals()\n",
+    "        for non_terminal in self.get_non_terminals():\n",
+    "            set_of_firsts.append(self.get_set_of_firsts_for_non_terminal(non_terminal, nullable_non_terminals))\n",
+    "        return set_of_firsts\n",
+    "    \n",
+    "    def get_set_of_firsts_for_n_production(self, production_number, nullable_non_terminals, set_of_firsts_for_non_terminals):\n",
+    "        set_of_firsts = []\n",
+    "        visited_non_terminals = []\n",
+    "        for symbol in self.production_arr[production_number].right_side:\n",
+    "            if self.is_terminal(symbol):\n",
+    "                set_of_firsts.append([symbol])\n",
+    "                break\n",
+    "            if symbol == self.null_sequence_symbol:\n",
+    "                break\n",
+    "            if symbol in nullable_non_terminals:\n",
+    "                if not symbol in visited_non_terminals:\n",
+    "                    set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts,\n",
+    "                                    set_of_firsts_for_non_terminals[self.get_non_terminals().index(symbol)])\n",
+    "                    visited_non_terminals.append(symbol)\n",
+    "            else:\n",
+    "                set_of_firsts = self.get_set_of_firsts_for_non_terminal(symbol)\n",
+    "                break\n",
+    "        return set_of_firsts\n",
+    "    \n",
+    "    def get_set_of_firsts_for_productions(self):\n",
+    "        set_of_firsts = []\n",
+    "        nullable_non_terminals = self.get_nullable_non_terminals()\n",
+    "        set_of_firsts_for_non_terminals = self.get_set_of_firsts_for_non_terminals()\n",
+    "        for index in range(0, len(self.production_arr)):\n",
+    "            set_of_firsts.append(self.get_set_of_firsts_for_n_production(index, nullable_non_terminals,\n",
+    "                                set_of_firsts_for_non_terminals))\n",
+    "        return set_of_firsts\n",
+    "                "
    ]
   },
   {
@@ -160,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -169,10 +197,8 @@
      "text": [
       "['<B>', '<D>', '<E>']\n",
       "[2, 6, 8]\n",
-      "['b']\n",
-      "['e']\n",
-      "['b', 'e', 'f']\n",
-      "['b', 'e', 'f']\n"
+      "[['a', 'e', 'b'], ['b'], ['c', 'e', 'd'], ['e'], ['b', 'e', 'f']]\n",
+      "[[['a']], ['e', ['b']], [], [['b']], [['c']], ['e', ['d']], [], [['e']], ['b', 'e'], [['f']]]\n"
      ]
     }
    ],
@@ -183,33 +209,23 @@
     "\n",
     "p1 = [Production('<S>', ['<A>', '<S>', '<B>']), Production('<S>', ['a']), Production('<A>', ['a', '<A>']),\n",
     "      Production('<A>', ['%']), Production('<B>', ['b', '<B>']), Production('<B>', ['%'])]\n",
-    "p_set = ProductionSet('%', p)   \n",
+    "p_set = ProductionSet('%', p, ['<A>', '<B>', '<C>', '<D>', '<E>'])   \n",
     "print(p_set.get_nullable_non_terminals())   \n",
-    "print(p_set.get_nullable_productions())\n",
-    "print(p_set.get_set_of_firsts('<E>'))"
+    "print(p_set.get_nullable_productions(p_set.get_nullable_non_terminals()))\n",
+    "print(p_set.get_set_of_firsts_for_non_terminals())\n",
+    "print(p_set.get_set_of_firsts_for_productions())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "s = 'asda'\n",
-    "print(s.index('a'))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
