--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,6 +160,7 @@
     "                break\n",
     "            if symbol in nullable_non_terminals:\n",
     "                if not symbol in visited_non_terminals:\n",
+    "                    print(set_of_firsts_for_non_terminals[self.get_non_terminals().index(symbol)])\n",
     "                    set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts,\n",
     "                                    set_of_firsts_for_non_terminals[self.get_non_terminals().index(symbol)])\n",
     "                    visited_non_terminals.append(symbol)\n",
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -198,6 +199,10 @@
       "['<B>', '<D>', '<E>']\n",
       "[2, 6, 8]\n",
       "[['a', 'e', 'b'], ['b'], ['c', 'e', 'd'], ['e'], ['b', 'e', 'f']]\n",
+      "['e']\n",
+      "['e']\n",
+      "['b']\n",
+      "['e']\n",
       "[[['a']], ['e', ['b']], [], [['b']], [['c']], ['e', ['d']], [], [['e']], ['b', 'e'], [['f']]]\n"
      ]
     }
@@ -225,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
