--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,13 +29,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ProductionSet:\n",
-    "    def __init__(self, null_sequence_symbol, production_arr, non_terminal_arr):\n",
+    "    def __init__(self, initial_non_terminal, null_sequence_symbol, end_of_sequence_symbol, production_arr, non_terminal_arr):\n",
+    "        self.initial_non_terminal = initial_non_terminal\n",
     "        self.null_sequence_symbol = null_sequence_symbol\n",
+    "        self.end_of_sequence_symbol = end_of_sequence_symbol\n",
     "        self.production_arr = production_arr\n",
     "        self.non_terminal_arr = non_terminal_arr\n",
     "\n",
@@ -154,18 +156,17 @@
     "        visited_non_terminals = []\n",
     "        for symbol in self.production_arr[production_number].right_side:\n",
     "            if self.is_terminal(symbol):\n",
-    "                set_of_firsts.append([symbol])\n",
+    "                set_of_firsts.append(symbol)\n",
     "                break\n",
     "            if symbol == self.null_sequence_symbol:\n",
     "                break\n",
     "            if symbol in nullable_non_terminals:\n",
     "                if not symbol in visited_non_terminals:\n",
-    "                    print(set_of_firsts_for_non_terminals[self.get_non_terminals().index(symbol)])\n",
     "                    set_of_firsts = util_f.add_list_no_repeated_elements(set_of_firsts,\n",
     "                                    set_of_firsts_for_non_terminals[self.get_non_terminals().index(symbol)])\n",
     "                    visited_non_terminals.append(symbol)\n",
     "            else:\n",
-    "                set_of_firsts = self.get_set_of_firsts_for_non_terminal(symbol)\n",
+    "                set_of_firsts = set_of_firsts_for_non_terminals[self.get_non_terminals().index(symbol)]\n",
     "                break\n",
     "        return set_of_firsts\n",
     "    \n",
@@ -177,6 +178,65 @@
     "            set_of_firsts.append(self.get_set_of_firsts_for_n_production(index, nullable_non_terminals,\n",
     "                                set_of_firsts_for_non_terminals))\n",
     "        return set_of_firsts\n",
+    "    \n",
+    "    def is_non_terminal_on_right_side_of_production(self, non_terminal, production):\n",
+    "        return non_terminal in production.right_side\n",
+    "    \n",
+    "    def is_non_terminal_at_the_end_right_side_of_production(self, non_terminal, production):\n",
+    "        return (production.right_side[len(production.right_side)-1] == non_terminal and\n",
+    "                production.right_side.index(non_terminal) == len(production.right_side)-1)\n",
+    "    \n",
+    "    def get_productions_same_non_terminal_l_side(self, non_terminal):\n",
+    "        productions = []\n",
+    "        for production in self.production_arr:\n",
+    "            if production.left_side == non_terminal and not production in productions:\n",
+    "                productions.append(production)\n",
+    "        return productions\n",
+    "    \n",
+    "    def get_productions_with_non_terminal_r_side(self, non_terminal):\n",
+    "        productions = []\n",
+    "        for production in self.production_arr:\n",
+    "            if non_terminal in production.right_side and not production in productions:\n",
+    "                productions.append(production)\n",
+    "        return productions\n",
+    "    \n",
+    "    def get_set_of_nexts_for_non_terminal(self, non_terminal, nullable_non_terminals, productions_same_non_terminal_l_side,\n",
+    "                                          productions_with_non_terminal_r_side, set_of_firsts_for_non_terminals):\n",
+    "        set_of_nexts = []\n",
+    "        for production in productions_same_non_terminal_l_side:\n",
+    "            if (non_terminal == self.initial_non_terminal \n",
+    "                and not self.is_non_terminal_on_right_side_of_production(non_terminal, production)):\n",
+    "                set_of_nexts.append(self.initial_non_terminal)\n",
+    "                break\n",
+    "        for production in productions_with_non_terminal_r_side:\n",
+    "            if self.is_non_terminal_at_the_end_right_side_of_production(non_terminal, production):\n",
+    "                set_of_nexts =  util_f.add_list_no_repeated_elements(set_of_nexts,\n",
+    "                                    self.get_set_of_nexts_for_non_terminal(production.left_side, nullable_non_terminals,\n",
+    "                                    self.get_productions_same_non_terminal_l_side(production.left_side),\n",
+    "                                    self.get_productions_with_non_terminal_r_side(production.left_side),\n",
+    "                                    set_of_firsts_for_non_terminals))\n",
+    "            else:\n",
+    "                non_terminal_found = False\n",
+    "                index = 0\n",
+    "                while index < len(production.right_side):\n",
+    "                    if production.right_side[index] == non_terminal:\n",
+    "                        index += 1\n",
+    "                        while index < len(production.right_side) and production.right_side[index] != non_terminal:\n",
+    "                            if self.is_terminal(production.right_side[index]):\n",
+    "                                set_of_nexts = util_f.add_list_no_repeated_elements(set_of_nexts,\n",
+    "                                                                                    [production.right_side[index]])\n",
+    "                                break\n",
+    "                            if production.right_side[index] in nullable_non_terminals:\n",
+    "                                set_of_nexts = util_f.add_list_no_repeated_elements(set_of_nexts,\n",
+    "                                set_of_firsts_for_non_terminals[self.non_terminal_arr.index(production.right_side[index])])\n",
+    "                            else:\n",
+    "                                \n",
+    "                for rigth_side in production.right_side:\n",
+    "                    if right_side == non_terminal:\n",
+    "                        non_terminal_founded = True\n",
+    "                    elif non_terminal_found:\n",
+    "                        \n",
+    "                        \n",
     "                "
    ]
   },
@@ -189,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -199,11 +259,7 @@
       "['<B>', '<D>', '<E>']\n",
       "[2, 6, 8]\n",
       "[['a', 'e', 'b'], ['b'], ['c', 'e', 'd'], ['e'], ['b', 'e', 'f']]\n",
-      "['e']\n",
-      "['e']\n",
-      "['b']\n",
-      "['e']\n",
-      "[[['a']], ['e', ['b']], [], [['b']], [['c']], ['e', ['d']], [], [['e']], ['b', 'e'], [['f']]]\n"
+      "[['a'], ['e', 'b'], [], ['b'], ['c'], ['e', 'd'], [], ['e'], ['b', 'e'], ['f']]\n"
      ]
     }
    ],
@@ -214,7 +270,7 @@
     "\n",
     "p1 = [Production('<S>', ['<A>', '<S>', '<B>']), Production('<S>', ['a']), Production('<A>', ['a', '<A>']),\n",
     "      Production('<A>', ['%']), Production('<B>', ['b', '<B>']), Production('<B>', ['%'])]\n",
-    "p_set = ProductionSet('%', p, ['<A>', '<B>', '<C>', '<D>', '<E>'])   \n",
+    "p_set = ProductionSet('<A>','%', '!', p, ['<A>', '<B>', '<C>', '<D>', '<E>'])   \n",
     "print(p_set.get_nullable_non_terminals())   \n",
     "print(p_set.get_nullable_productions(p_set.get_nullable_non_terminals()))\n",
     "print(p_set.get_set_of_firsts_for_non_terminals())\n",
@@ -230,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
